syntax = "proto3";

package dummy ;

option java_package = "com.demo.dummy";

option java_multiple_files = true;

message DummyMessage {
  int32 id       = 1;
  string message = 2;
}

message voidN {}

service DummyService {
  rpc getMessage (voidN) returns (DummyMessage);
}